--- a/src/view/style.css
+++ b/src/view/style.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     height: 100vh;
     font-family: Arial, sans-serif;
-    background-color: #f3f4f6;
+    background-color: darkslategray;
 }
 
 .container {
