--- a/src/view/index.html
+++ b/src/view/index.html
@@ -15,8 +15,8 @@
     <main>
 
         <div class="auth-links">
-            <a href="login.php" class="button">Login</a>
-            <a href="register.php" class="button">Registrar</a>
+            <a href="login.html" class="button">Login</a>
+            <a href="register.html" class="button">Registrar</a>
         </div>
     </main>
 
