Alteracao no readme e em alguns botoes

--- a/src/view/registerMovie.html
+++ b/src/view/registerMovie.html
@@ -20,7 +20,7 @@
             <br>
             <label for="rating">Rating:</label>
             <input type="number" id="rating" name="rating" required>
-            <button onclick="detectType()">Cadastrar</button>
+            <button onclick="detectType()">Salvar</button>
             <button onclick="window.location.href='/src/view/home.html'">Voltar</button>
         </form>
     </div>
