--- a/src/view/home.html
+++ b/src/view/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - CineStar</title>
     <link rel="stylesheet" href="styleHome.css">
-
+    <script src="scriptUser.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,6 +15,7 @@
 
         <div class="button-group">
             <button onclick="window.location.href='/src/view/registerMovie.html'">Cadastrar filme</button>
+            <button onclick="logout()">Logout</button>
         </div>
 
         <main>
